# ignite

./: .dockerignore  .env.example  .gitattributes  .gitignore  Caddyfile  Dockerfile  docker-compose.stack.yml  docker-compose.yml
.engine/: deliverable-manifest.txt
.engine/contracts/: reverify.toml
.tracking/: actors.sysml  backlog.sysml  business.sysml  decisions-critique.sysml  decisions-deployment.sysml  decisions-process.sysml  decisions.sysml  issues.sysml  requirements.sysml
.tracking/delivery/: sprint01_fastTree.sysml  sprint02_realVaultBench.sysml  sprint03_dockerContextBench.sysml  sprint04_parallelStartup.sysml  sprint05_liveIndex.sysml  sprint06_wsLiveSync.sysml  sprint07_fsCrud.sysml  sprint08_bootstrapVault.sysml  sprint09_staticServing.sysml  sprint10_vaultCrud.sysml  sprint11_proxy.sysml  sprint12_settingsVersionPlugins.sysml  sprint13_downloadZip.sysml  sprint14_headlessSync.sysml  sprint15_dockerImage.sysml  sprint16_robustStartup.sysml  sprint17_uxObservability.sysml
.tracking/sittings/: sitting01-review.sysml  sitting02-review.sysml  sitting03-review.sysml
docker/: entrypoint.sh
server/: Cargo.toml  Dockerfile
server/bench/: ignis-walk-baseline.js  run-docker-bench.ps1
server/examples/: bench.rs
server/src/: app.rs  fs_routes.rs  headless_sync.rs  index.rs  lib.rs  main.rs  plugins.rs  proxy_routes.rs  registry.rs  settings_routes.rs  static_routes.rs  vault_routes.rs  ws.rs
