[package]
name = "ignite-server"
version = "0.1.0"
edition = "2021"
description = "Ignite — a performant Rust drop-in for the Ignis self-hosted Obsidian server"

[lib]
name = "ignite_server"
path = "src/lib.rs"

[[bin]]
name = "ignite-server"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ignore = "0.4"
rayon = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
axum = "0.8"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
